--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@
     @apply border-gray-200;
   }
 
-  body {
-    @apply bg-gray-50 text-gray-800 font-sans;
+body {
+    @apply bg-white text-gray-800 font-sans;
     font-feature-settings: "rlig" 1, "calt" 1;
     position: relative;
   }
